--- a/pom.xml
+++ b/pom.xml
@@ -751,6 +751,8 @@
                         <configuration>
                             <source>8</source>
                             <additionalOptions>${javadoc.opts}</additionalOptions>
+                            <!-- disable linting for building release with Java 11 -->
+                            <doclint>none</doclint>
                         </configuration>
                     </plugin>
                     <!-- We want to sign the artifact, the POM, and all attached artifacts -->
